--- a/index.html
+++ b/index.html
@@ -40,10 +40,23 @@
                 <li class="nav-item">
                     <a href="#" class="nav-link">Contact</a>
                 </li>
-
             </ul>
         </nav>
     </div>
 </header>
+
+<main>
+    <div class="explore">
+        <div class="container">
+            <div class="explore-heading">
+                <h1 class="title">Explore</h1>
+                <h3 class="subtitle">cozy apartments in Split</h3>
+            </div>
+            <a href="#" class="button button-gradient">Discover now
+                <span class="dots"><i class="fas fa-ellipsis-h"></i></span>
+            </a>
+        </div>
+    </div>
+</main>
 
 </html>
