04-apartments-section-part1

--- a/index.html
+++ b/index.html
@@ -13,100 +13,174 @@
 </head>
 
 <body>
-
-</body>
-<header class="header">
-    <div class="container">
-        <nav class="nav">
-            <a href="index.html" class="logo">
-                <img src="./assets/logo.png" alt="logo">
-            </a>
-            <div class="hamburger-menu">
-                <i class="fas fa-bars"></i>
-                <i class="fas fa-times"></i>
-            </div>
-            <ul class="nav-list">
-                <li class="nav-item">
-                    <a href="index.html" class="nav-link">Home</a>
-                </li>
-                <li class="nav-item">
-                    <a href="#" class="nav-link">About</a>
-                </li>
-                <li class="nav-item">
-                    <a href="#" class="nav-link">Offers</a>
-                </li>
-                <li class="nav-item">
-                    <a href="#" class="nav-link">News</a>
-                </li>
-                <li class="nav-item">
-                    <a href="#" class="nav-link">Contact</a>
-                </li>
-            </ul>
-        </nav>
-    </div>
-</header>
-
-<main>
-    <section class="explore">
+    <header class="header">
         <div class="container">
-            <div class="explore-heading">
-                <h1 class="title">Explore</h1>
-                <h3 class="subtitle">cozy apartments in Split</h3>
-            </div>
-            <a href="#" class="button button-gradient-right">Discover now
-                <span class="dots"><i class="fas fa-ellipsis-h"></i></span>
-            </a>
+            <nav class="nav">
+                <a href="index.html" class="logo">
+                    <img src="./assets/logo.png" alt="logo">
+                </a>
+                <div class="hamburger-menu">
+                    <i class="fas fa-bars"></i>
+                    <i class="fas fa-times"></i>
+                </div>
+                <ul class="nav-list">
+                    <li class="nav-item">
+                        <a href="index.html" class="nav-link">Home</a>
+                    </li>
+                    <li class="nav-item">
+                        <a href="#" class="nav-link">About</a>
+                    </li>
+                    <li class="nav-item">
+                        <a href="#" class="nav-link">Offers</a>
+                    </li>
+                    <li class="nav-item">
+                        <a href="#" class="nav-link">News</a>
+                    </li>
+                    <li class="nav-item">
+                        <a href="#" class="nav-link">Contact</a>
+                    </li>
+                </ul>
+            </nav>
         </div>
-    </section>
+    </header>
 
-    <section class="booking">
-        <div class="container">
-            <form action="" class="form">
-                <div class="input-group">
-                    <label for="check-in" class="input-label">Check-in</label>
-                    <input type="date" class="input" id="check-in">
+    <main>
+        <section class="explore">
+            <div class="container">
+                <div class="explore-heading">
+                    <h1 class="title">Explore</h1>
+                    <h3 class="subtitle">cozy apartments in Split</h3>
                 </div>
-                <div class="input-group">
-                    <label for="check-out" class="input-label">Check-out</label>
-                    <input type="date" class="input" id="check-out">
-                </div>
-                <div class="input-group">
-                    <label for="guests" class="input-label">Adults</label>
-                    <select class="options" id="guests">
-                        <option value="0">0</option>
-                        <option value="1">1</option>
-                        <option value="2">2</option>
-                        <option value="3">3</option>
-                        <option value="4">4</option>
-                        <option value="5">5</option>
-                    </select>
-                </div>
-                <div class="input-group">
-                    <label for="children" class="input-label">Children</label>
-                    <select class="options" id="children">
-                        <option value="0">0</option>
-                        <option value="1">1</option>
-                        <option value="2">2</option>
-                        <option value="3">3</option>
-                        <option value="4">4</option>
-                    </select>
-                </div>
-                <div class="input-group">
-                    <label for="apartments" class="input-label">Apartments</label>
-                    <select class="options" id="apartments">
-                        <option value="0">0</option>
-                        <option value="1">1</option>
-                        <option value="2">2</option>
-                        <option value="3">3</option>
-                        <option value="4">4</option>
-                    </select>
-                </div>
-                <button type="submit" class="button button-form button-gradient-left">Search
+                <a href="#" class="button button-gradient">Discover now
                     <span class="dots"><i class="fas fa-ellipsis-h"></i></span>
-                </button>
-            </form>
-        </div>
-    </section>
-</main>
+                </a>
+            </div>
+        </section>
+
+        <section class="booking">
+            <div class="container">
+                <form action="" class="form">
+                    <div class="input-group">
+                        <label for="check-in" class="input-label">Check-in</label>
+                        <input type="date" class="input" id="check-in">
+                    </div>
+                    <div class="input-group">
+                        <label for="check-out" class="input-label">Check-out</label>
+                        <input type="date" class="input" id="check-out">
+                    </div>
+                    <div class="input-group">
+                        <label for="guests" class="input-label">Adults</label>
+                        <select class="options" id="guests">
+                            <option value="0">0</option>
+                            <option value="1">1</option>
+                            <option value="2">2</option>
+                            <option value="3">3</option>
+                            <option value="4">4</option>
+                            <option value="5">5</option>
+                        </select>
+                    </div>
+                    <div class="input-group">
+                        <label for="children" class="input-label">Children</label>
+                        <select class="options" id="children">
+                            <option value="0">0</option>
+                            <option value="1">1</option>
+                            <option value="2">2</option>
+                            <option value="3">3</option>
+                            <option value="4">4</option>
+                        </select>
+                    </div>
+                    <div class="input-group">
+                        <label for="apartments" class="input-label">Apartments</label>
+                        <select class="options" id="apartments">
+                            <option value="0">0</option>
+                            <option value="1">1</option>
+                            <option value="2">2</option>
+                            <option value="3">3</option>
+                            <option value="4">4</option>
+                        </select>
+                    </div>
+                    <button type="submit" class="button button-form button-search">Search
+                        <span class="dots"><i class="fas fa-ellipsis-h"></i></span>
+                    </button>
+                </form>
+            </div>
+        </section>
+
+        <section class="apartments">
+            <div class="container">
+                <h5 class="section-head">
+                    <span class="heading">Explore</span>
+                    <span class="sub-heading">our beautiful apartments</span>
+                </h5>
+            </div>
+            <div class="grid">
+                <div class="grid-item featured-apartment">
+                    <img src="./assets/apartments/kings1.jpg" class="apartment-image" alt="">
+                    <h5 class="apartment-name">King's view aparment</h5>
+                    <span class="apartment-price">From €50/Night</span>
+                    <div class="apartment-rating">
+                        <i class="fas fa-star rating"></i>
+                        <i class="fas fa-star rating"></i>
+                        <i class="fas fa-star rating"></i>
+                        <i class="fas fa-star rating"></i>
+                    </div>
+                    <a href="" class="button button-gradient">Reserve now
+                        <span class="dots"><i class="fas fa-ellipsis-h"></i></span>
+                    </a>
+                </div>
+            </div>
+            <div class="grid">
+                <div class="grid-item featured-apartment">
+                    <img src="./assets/apartments/bellaMare1.jpg" class="apartment-image" alt="">
+                    <h5 class="apartment-name">Bella Mare aparment</h5>
+                    <span class="apartment-price">From €40/Night</span>
+                    <div class="apartment-rating">
+                        <i class="fas fa-star rating"></i>
+                        <i class="fas fa-star rating"></i>
+                        <i class="fas fa-star rating"></i>
+                        <i class="fas fa-star-half rating"></i>
+                    </div>
+                    <a href="" class="button button-gradient">Reserve now
+                        <span class="dots"><i class="fas fa-ellipsis-h"></i></span>
+                    </a>
+                </div>
+            </div>
+            <div class="grid">
+                <div class="grid-item featured-apartment">
+                    <img src="./assets/apartments/pomalo1.jpg" class="apartment-image" alt="">
+                    <h5 class="apartment-name">Pomalo aparment</h5>
+                    <span class="apartment-price">From €50/Night</span>
+                    <div class="apartment-rating">
+                        <i class="fas fa-star rating"></i>
+                        <i class="fas fa-star rating"></i>
+                        <i class="fas fa-star rating"></i>
+                        <i class="fas fa-star rating"></i>
+                    </div>
+                    <a href="" class="button button-gradient">Reserve now
+                        <span class="dots"><i class="fas fa-ellipsis-h"></i></span>
+                    </a>
+                </div>
+            </div>
+            <div class="grid">
+                <div class="grid-item featured-apartment">
+                    <img src="./assets/apartments/superMario1.jpg" class="apartment-image" alt="">
+                    <h5 class="apartment-name">Super Mario aparment</h5>
+                    <span class="apartment-price">From €40/Night</span>
+                    <div class="apartment-rating">
+                        <i class="fas fa-star rating"></i>
+                        <i class="fas fa-star rating"></i>
+                        <i class="fas fa-star rating"></i>
+                        <i class="fas fa-star-half rating"></i>
+                    </div>
+                    <a href="" class="button button-gradient">Reserve now
+                        <span class="dots"><i class="fas fa-ellipsis-h"></i></span>
+                    </a>
+                </div>
+            </div>
+
+        </section>
+    </main>
+</body>
+
 
 </html>
