--- a/index.html
+++ b/index.html
@@ -112,69 +112,94 @@
                     <span class="heading">Explore</span>
                     <span class="sub-heading">our beautiful apartments</span>
                 </h5>
-            </div>
-            <div class="grid">
-                <div class="grid-item featured-apartment">
-                    <img src="./assets/apartments/kings1.jpg" class="apartment-image" alt="">
-                    <h5 class="apartment-name">King's view aparment</h5>
-                    <span class="apartment-price">From €50/Night</span>
-                    <div class="apartment-rating">
-                        <i class="fas fa-star rating"></i>
-                        <i class="fas fa-star rating"></i>
-                        <i class="fas fa-star rating"></i>
-                        <i class="fas fa-star rating"></i>
+
+                <div class="apartment-inner">
+                    <div class="apartment-item featured-apartment">
+                        <img src="./assets/apartments/kings1.jpg" class="apartment-image" alt="">
+                        <h5 class="apartment-name">King's view aparment</h5>
+                        <span class="apartment-price">From €50/Night</span>
+                        <div class="apartment-rating">
+                            <i class="fas fa-star rating"></i>
+                            <i class="fas fa-star rating"></i>
+                            <i class="fas fa-star rating"></i>
+                            <i class="fas fa-star rating"></i>
+                        </div>
+                        <a href="" class="button button-gradient">Reserve now
+                            <span class="dots"><i class="fas fa-ellipsis-h"></i></span>
+                        </a>
                     </div>
-                    <a href="" class="button button-gradient">Reserve now
-                        <span class="dots"><i class="fas fa-ellipsis-h"></i></span>
-                    </a>
+                </div>
+                <div class="apartment-inner">
+                    <div class="apartment-item featured-apartment">
+                        <img src="./assets/apartments/pomalo1.jpg" class="apartment-image" alt="">
+                        <h5 class="apartment-name">Pomalo aparment</h5>
+                        <span class="apartment-price">From €50/Night</span>
+                        <div class="apartment-rating">
+                            <i class="fas fa-star rating"></i>
+                            <i class="fas fa-star rating"></i>
+                            <i class="fas fa-star rating"></i>
+                            <i class="fas fa-star rating"></i>
+                        </div>
+                        <a href="" class="button button-gradient">Reserve now
+                            <span class="dots"><i class="fas fa-ellipsis-h"></i></span>
+                        </a>
+                    </div>
+                </div>
+                <div class="apartment-inner">
+                    <div class="apartment-item featured-apartment">
+                        <img src="./assets/apartments/bellaMare1.jpg" class="apartment-image" alt="">
+                        <h5 class="apartment-name">Bella Mare aparment</h5>
+                        <span class="apartment-price">From €40/Night</span>
+                        <div class="apartment-rating">
+                            <i class="fas fa-star rating"></i>
+                            <i class="fas fa-star rating"></i>
+                            <i class="fas fa-star rating"></i>
+                            <i class="fas fa-star-half rating"></i>
+                        </div>
+                        <a href="" class="button button-gradient">Reserve now
+                            <span class="dots"><i class="fas fa-ellipsis-h"></i></span>
+                        </a>
+                    </div>
+                </div>
+                <div class="apartment-inner">
+                    <div class="apartment-item featured-apartment">
+                        <img src="./assets/apartments/superMario1.jpg" class="apartment-image" alt="">
+                        <h5 class="apartment-name">Super Mario aparment</h5>
+                        <span class="apartment-price">From €40/Night</span>
+                        <div class="apartment-rating">
+                            <i class="fas fa-star rating"></i>
+                            <i class="fas fa-star rating"></i>
+                            <i class="fas fa-star rating"></i>
+                            <i class="fas fa-star-half rating"></i>
+                        </div>
+                        <a href="" class="button button-gradient">Reserve now
+                            <span class="dots"><i class="fas fa-ellipsis-h"></i></span>
+                        </a>
+                    </div>
                 </div>
             </div>
-            <div class="grid">
-                <div class="grid-item featured-apartment">
-                    <img src="./assets/apartments/pomalo1.jpg" class="apartment-image" alt="">
-                    <h5 class="apartment-name">Pomalo aparment</h5>
-                    <span class="apartment-price">From €50/Night</span>
-                    <div class="apartment-rating">
-                        <i class="fas fa-star rating"></i>
-                        <i class="fas fa-star rating"></i>
-                        <i class="fas fa-star rating"></i>
-                        <i class="fas fa-star rating"></i>
+        </section>
+
+        <section class="offer">
+            <div class="container">
+
+                <div class="offer-content">
+                    <div class="discount">
+                        50% off
                     </div>
-                    <a href="" class="button button-gradient">Reserve now
-                        <span class="dots"><i class="fas fa-ellipsis-h"></i></span>
-                    </a>
-                </div>
-            </div>
-            <div class="grid">
-                <div class="grid-item featured-apartment">
-                    <img src="./assets/apartments/bellaMare1.jpg" class="apartment-image" alt="">
-                    <h5 class="apartment-name">Bella Mare aparment</h5>
-                    <span class="apartment-price">From €40/Night</span>
-                    <div class="apartment-rating">
-                        <i class="fas fa-star rating"></i>
-                        <i class="fas fa-star rating"></i>
-                        <i class="fas fa-star rating"></i>
-                        <i class="fas fa-star-half rating"></i>
+                    <h5 class="apartment-name">King's view apartment</h5>
+                    <div class="apartment-ratings">
+                        <div class="apartment-rating">
+                            <i class="fas fa-star rating"></i>
+                            <i class="fas fa-star rating"></i>
+                            <i class="fas fa-star rating"></i>
+                            <i class="fas fa-star rating"></i>
+                        </div>
+                        <p class="offer-text">Lorem ipsum autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie consequat, vel illum dolore eu feugiat nulla facilisis. </p>
+                        <a href="" class="button button-gradient">Reedem offer
+                            <span class="dots"><i class="fas fa-ellipsis-h"></i></span>
+                        </a>
                     </div>
-                    <a href="" class="button button-gradient">Reserve now
-                        <span class="dots"><i class="fas fa-ellipsis-h"></i></span>
-                    </a>
-                </div>
-            </div>
-            <div class="grid">
-                <div class="grid-item featured-apartment">
-                    <img src="./assets/apartments/superMario1.jpg" class="apartment-image" alt="">
-                    <h5 class="apartment-name">Super Mario aparment</h5>
-                    <span class="apartment-price">From €40/Night</span>
-                    <div class="apartment-rating">
-                        <i class="fas fa-star rating"></i>
-                        <i class="fas fa-star rating"></i>
-                        <i class="fas fa-star rating"></i>
-                        <i class="fas fa-star-half rating"></i>
-                    </div>
-                    <a href="" class="button button-gradient">Reserve now
-                        <span class="dots"><i class="fas fa-ellipsis-h"></i></span>
-                    </a>
                 </div>
             </div>
 
