--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
                             <option value="4">4</option>
                         </select>
                     </div>
-                    <button type="submit" class="button button-form button-search">Search
+                    <button type="submit" class="button button-form button-blue">Search
                         <span class="dots"><i class="fas fa-ellipsis-h"></i></span>
                     </button>
                 </form>
@@ -182,7 +182,6 @@
 
         <section class="offer">
             <div class="container">
-
                 <div class="offer-content">
                     <div class="discount">
                         50% off
@@ -201,6 +200,45 @@
                         </a>
                     </div>
                 </div>
+            </div>
+        </section>
+
+
+        <section class="contact">
+            <div class="container">
+
+                <h5 class="section-head">
+                    <span class="heading">Contact</span>
+                    <span class="sub-heading">Get in touch with us</span>
+                </h5>
+                <div class="contact-content">
+                    <div class="traveler-wrap">
+                        <img src="./assets/traveler-family.jpg" alt="" class="">
+                    </div>
+                </div>
+                <form action="" class="form contact-form">
+                    <div class="input-group-wrap">
+                        <div class="input-group">
+                            <input type="text" class="input" placeholder="Name" required>
+                            <span class="bar"></span>
+                        </div>
+                        <div class="input-group">
+                            <input type="email" class="input" placeholder="E-mail" required>
+                            <span class="bar"></span>
+                        </div>
+                    </div>
+                    <div class="input-group">
+                        <input type="text" class="input" placeholder="Subject" required>
+                        <span class="bar"></span>
+                    </div>
+                    <div class="input-group">
+                        <textarea class="input" cols="32" rows="8" placeholder="Text Message" required></textarea>
+                        <span class="bar "></span>
+                    </div>
+                    <button type="submit " class="button button-gradient form-button ">Send Message
+                        <span class="dots "><i class="fas fa-ellipsis-h "></i> </span>
+                    </button>
+                </form>
             </div>
 
         </section>
