--- a/index.html
+++ b/index.html
@@ -194,7 +194,7 @@
                             <i class="fas fa-star rating"></i>
                             <i class="fas fa-star rating"></i>
                         </div>
-                        <p class="offer-text">Lorem ipsum autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie consequat, vel illum dolore eu feugiat nulla facilisis. </p>
+                        <p class="text">Lorem ipsum autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie consequat, vel illum dolore eu feugiat nulla facilisis. </p>
                         <a href="" class="button button-gradient">Reedem offer
                             <span class="dots"><i class="fas fa-ellipsis-h"></i></span>
                         </a>
@@ -235,14 +235,41 @@
                         <textarea class="input" cols="32" rows="8" placeholder="Text Message" required></textarea>
                         <span class="bar "></span>
                     </div>
-                    <button type="submit " class="button button-gradient form-button ">Send Message
+                    <button type="submit" class="button button-gradient form-button ">Send Message
                         <span class="dots "><i class="fas fa-ellipsis-h "></i> </span>
                     </button>
                 </form>
             </div>
 
         </section>
+
     </main>
+
+    <footer class="footer">
+        <div class="container">
+            <div class="footer-content">
+                <div class="footer-content-inner">
+                    <a href="index.html" class="logo">
+                        <img src="./assets/logo.png" class="logo-image" alt="logo">
+                    </a>
+                    <div class="text">
+                        Lorem ipsum autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie consequat
+                    </div>
+                </div>
+                <div class="social-media-wrap">
+                    <h4 class="footer-heading">Follow us</h4>
+                    <div class="social-media">
+                        <a href="#" class="social-link"><i class="fab fa-facebook-square"></i></a>
+                        <a href="#" class="social-link"><i class="fab fa-instagram"></i></a>
+                        <a href="#" class="social-link"><i class="fab fa-airbnb"></i></a>
+                        <a href="#" class="social-link"><i class="fab fa-tripadvisor"></i></a>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+    </footer>
+
 </body>
 
 
