11-contact-section-change

--- a/index.html
+++ b/index.html
@@ -211,34 +211,36 @@
                     <span class="heading">Contact</span>
                     <span class="sub-heading">Get in touch with us</span>
                 </h5>
-                <div class="contact-content">
-                    <div class="traveler-wrap">
-                        <img src="./assets/traveler-family.jpg" alt="" class="">
+                <div class="contact-inner">
+                    <div class="contact-content">
+                        <div class="traveler-wrap">
+                            <img src="./assets/traveler-family.jpg" alt="" class="">
+                        </div>
                     </div>
+                    <form action="" class="form contact-form">
+                        <div class="input-group-wrap">
+                            <div class="input-group">
+                                <input type="text" class="input" placeholder="Name" required>
+                                <span class="bar"></span>
+                            </div>
+                            <div class="input-group">
+                                <input type="email" class="input" placeholder="E-mail" required>
+                                <span class="bar"></span>
+                            </div>
+                        </div>
+                        <div class="input-group">
+                            <input type="text" class="input" placeholder="Subject" required>
+                            <span class="bar"></span>
+                        </div>
+                        <div class="input-group">
+                            <textarea class="input" cols="32" rows="8" placeholder="Text Message" required></textarea>
+                            <span class="bar "></span>
+                        </div>
+                        <button type="submit" class="button button-gradient form-button">Send Message
+                            <span class="dots "><i class="fas fa-ellipsis-h "></i> </span>
+                        </button>
+                    </form>
                 </div>
-                <form action="" class="form contact-form">
-                    <div class="input-group-wrap">
-                        <div class="input-group">
-                            <input type="text" class="input" placeholder="Name" required>
-                            <span class="bar"></span>
-                        </div>
-                        <div class="input-group">
-                            <input type="email" class="input" placeholder="E-mail" required>
-                            <span class="bar"></span>
-                        </div>
-                    </div>
-                    <div class="input-group">
-                        <input type="text" class="input" placeholder="Subject" required>
-                        <span class="bar"></span>
-                    </div>
-                    <div class="input-group">
-                        <textarea class="input" cols="32" rows="8" placeholder="Text Message" required></textarea>
-                        <span class="bar "></span>
-                    </div>
-                    <button type="submit" class="button button-gradient form-button ">Send Message
-                        <span class="dots "><i class="fas fa-ellipsis-h "></i> </span>
-                    </button>
-                </form>
             </div>
 
         </section>
